--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
       <div class="d-flex row flex-wrap" id="div-row">
         <div class="col-3 border border-info bg-light" id='left-column"'>col-3 <form class=" form-inline my-2 my-lg-0 p-5" id="searchbar">
-          <input class="form-control mr-sm-2" type="search" placeholder="Enter city name" aria-label="Search">
+          <input id="city-search" class="form-control mr-sm-2" type="search" placeholder="Enter city name" aria-label="Search">
           <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
         </form>
         <ul class="list-group">
