--- a/index.html
+++ b/index.html
@@ -4,40 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Link to Font Awesome -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <!-- Link to Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <!-- Link to CSS -->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <title>Weather Dashboard App</title>
   </head>
   <body>
+    <!-- Header -->
     <header>
+      <!--Navbar-->
       <nav class="navbar navbar-dark bg-dark">
+        <!--Navbar Container-->
         <div class="container-fluid">
+          <!--H1-->
           <h1 class="navbar-brand mx-auto mb-0 fs-2 p-3">Weather Dashboard</h1>
         </div>
       </nav>
     </header>
+    <!--Main Section-->
     <main class="container-fluid">
+      <!--Searchbar Div-->
       <div class="row px-3">
+        <!--Searchbar Column-->
         <div class="col-md-3 col-sm-12 bg-light">
           <div>
+            <!--Searchbar H4-->
             <h4 class="p-md-2">Search for a City:</h4>
+            <!--Searchbar Form-->
             <form
               class="row row-cols-lg-auto g-3 align-items-center"
               id="search-by-city-form"
             >
               <div class="col-12">
+                <!--Searchbar Input Div-->
                 <div class="input-group">
+                  <!--Searchbar Input-->
                   <input
                     type="text"
                     class="form-control"
@@ -48,21 +62,30 @@
               </div>
 
               <div class="col-12">
+                <!--Search Button-->
                 <button type="submit" class="btn btn-primary">
+                  <!--Search Icon-->
                   <i class="fas fa-search"></i>
                 </button>
               </div>
             </form>
           </div>
+          <!--Previously Search Cities Div-->
           <div class="my-4" id="searched-cities"></div>
         </div>
+        <!--Large Column Container-->
         <div class="col-md-9 col-sm-12">
+          <!--Row For Current Day Weather-->
           <div class="row">
+            <!--Large Column For Current Day Weather-->
             <div class="col-12" id="current-day"></div>
           </div>
+          <!--Row For 5-Day Forecast-->
           <div class="row">
+            <!--Column For 5-Day Forecast-->
             <div class="col-12">
               <h2>5-Day Forecast</h2>
+              <!--5-Day Forecast Cards Container-->
               <div
                 class="d-flex flex-wrap justify-content-around align-items-stretch"
                 id="forecast-cards-container"
@@ -77,21 +100,25 @@
       integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
       crossorigin="anonymous"
     ></script>
+    <!--Link to Bootstrap-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
       integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
       crossorigin="anonymous"
     ></script>
+    <!--Link to jQuery-->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
       crossorigin="anonymous"
     ></script>
+    <!--Link to Moment.js-->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
       integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
       crossorigin="anonymous"
     ></script>
+    <!--Link to Javascript-->
     <script src="./assets/javascript/main.js"></script>
   </body>
 </html>
